--- a/natours/index.html
+++ b/natours/index.html
@@ -30,13 +30,32 @@
     </header>
     <main>
       <section class="section-about">
-        <div class="u-center-text u-margin-bottom-8">
+        <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exciting tours for advanturous people
           </h2>
         </div>
         <div class="row">
-          <div class="col-1-of-2">text content</div>
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos,
+              accusantium! Quam facilis perferendis aspernatur minima provident
+              hic, eveniet quisquam rem est dignissimos illum ad, alias minus
+              ullam officia, laborum laboriosam!
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live adventures like you never have before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
+              magnam expedita eum adipisci tempora rerum magni? Magnam error
+              modi, nesciunt repudiandae sit quidem tenetur quod?
+            </p>
+            <a href="#" class="btn-text">Learn more &rarr;</a>
+          </div>
           <div class="col-1-of-2">image</div>
         </div>
       </section>
