--- a/natours/index.html
+++ b/natours/index.html
@@ -96,8 +96,8 @@
                 Meet nature
               </h3>
               <p class="feature-box__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Dignissimos, odio voluptate quis magni incidunt totam veniam ea.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Excepturi facere sit laboriosam harum soluta debitis.
               </p>
             </div>
           </div>
@@ -109,7 +109,7 @@
               </h3>
               <p class="feature-box__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Dignissimos, odio voluptate quis magni incidunt totam veniam ea.
+                Doloribus libero consequuntur quos assumenda rerum .
               </p>
             </div>
           </div>
@@ -120,8 +120,8 @@
                 live a healthier life
               </h3>
               <p class="feature-box__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Dignissimos, odio voluptate quis magni incidunt totam veniam ea.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
+                exercitationem molestias est illum corporis!quos assumenda.
               </p>
             </div>
           </div>
