--- a/natours/index.html
+++ b/natours/index.html
@@ -227,6 +227,34 @@
           <a href="#" class="btn btn-green">Discover all tours</a>
         </div>
       </section>
+      <section class="section-stories">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">We make peoplr genuinely happy</h2>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="./img/nat-8.jpg"
+                alt="person on a tour"
+                class="story__img"
+              />
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Facilis, totam nesciunt quisquam ea vel adipisci, tempora
+                blanditiis nisi alias eaque fuga aliquam. Est repellat
+                repellendus excepturi sed magnam ea quae laudantium sunt saepe,
+                quam placeat necessitatibus, harum minima voluptatum aliquam?
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- <section class="grid-test">
       <div class="row">
