--- a/natours/index.html
+++ b/natours/index.html
@@ -239,6 +239,7 @@
                 alt="person on a tour"
                 class="story__img"
               />
+              <figcaption class="story__caption">Mary Smith</figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">
@@ -253,6 +254,33 @@
               </p>
             </div>
           </div>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="./img/nat-9.jpg"
+                alt="person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                WOW! my life si completely different now
+              </h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam
+                dolores et quod voluptates minima, perspiciatis expedita,
+                perferendis deleniti illum similique ad blanditiis veritatis hic
+                corrupti non aspernatur fugiat dolore? Nesciunt est suscipit
+                itaque quia quo?
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="u-center-text u-margin-top-big">
+          <a href="#" class="btn-text u-center-text">Read all stories &rarr;</a>
         </div>
       </section>
     </main>
