--- a/natours/index.html
+++ b/natours/index.html
@@ -312,11 +312,11 @@
                   <input
                     type="email"
                     class="form__input"
-                    placeholder="Email"
+                    placeholder="Email Address"
                     id="email"
                     required
                   />
-                  <label for="email" class="form__label">Email</label>
+                  <label for="email" class="form__label">Email Address</label>
                 </div>
               </form>
             </div>
